--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,12 @@
   }
   .custom-scrollbar::-webkit-scrollbar-track {
     background: #f1f1f1;
+    width: 2px;
   }
   .custom-scrollbar::-webkit-scrollbar-thumb {
     background-color: #888;
     border-radius: 10px;
+    
   }
   .custom-scrollbar::-webkit-scrollbar-thumb:hover {
     background-color: #555;
